manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "cloudsample"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "cloudsample"
  template:
    metadata:
      labels:
        app: "cloudsample"
    spec:
      containers:
        - name: "cloudsample"
          image: cepgstapacr.azurecr.io/82275303
          ports:
          - containerPort: 8080
