manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-cloudsample
spec:
    ports:
    - port: 8080 
    selector:
        app: "cloudsample"
